# rusti_aircraft_api

./: .env  .rustfmt.toml  Cargo.toml  DIESEL_CLI.md  README.md
db/: airplanes.rs  lib.rs  pg_pool.rs
migrations/2019-11-03-203128_create_airplanes_users_favorites/: down.sql  up.sql
migrations/2021-11-21-013103_aircraft/: up.sql
misc/: airplanes.rs  auth.rs  main.rs  pg_pool.rs
src/: _users-old.rs  airplanes.json  airplanes.rs  lib.rs  main.rs  models.rs  pg_pool.rs  schema.rs  seed.rs  tests.rs
src/users/: auth.rs  mod.rs  model.rs  schema.rs
