[package]
name = "mathias_rust"
version = "0.1.0"
authors = ["Ross Todd <rosstod@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.1", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.13.0"
rocket = "0.4.0"
rocket_contrib = "0.4.0"
serde = "1.0.87"
serde_json = "1.0.38"
serde_derive = "1.0.87"
rocket_codegen = "0.4.0"
r2d2 = "0.8.3"
